# optee_examples

./: README.md
cus_test_001/: Android.mk  CMakeLists.txt
cus_test_001/host/: Makefile  main.c
cus_test_001/ta/: Makefile  cus_test_001_ta.c  sub.mk  user_ta_header_defines.h
cus_test_001/ta/include/: cus_test_001_ta.h
secure/: Android.mk  CMakeLists.txt
secure/host/: Makefile  secure.c  secure.c.bak
secure/host/include/: secure_api.h
secure/ta/: Android.mk  Makefile  aes.c  ecc.c  entry.c  hash.c  key.c  rsa.c  secure_ori.c  secure_ta.c  sm2.c  sm2.c.bak  sm4.c  store.c  sub.mk  temp.c  user_ta_header_defines.h
secure/ta/include/: aes.h  common.h  ecc.h  hash.h  key.h  rsa.h  secure_ta.h  sm2.h  sm2.h.bak  sm4.h  store.h
